--- a/index.htm
+++ b/index.htm
@@ -325,9 +325,12 @@ His research interests include machine learning, causal inference, continual lea
 <ul>
 
 
+<li> 
+<font size="2" color="red"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021.
+</li>
 
 <li> 
-<font size="2" color="red"> [<I>June 01, 2020</I>] </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
+<font size="2" color="red"> [<I>June 01, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
@@ -345,18 +348,9 @@ His research interests include machine learning, causal inference, continual lea
 </p>
 
 <ul>
-
-<li>Digital Image Processing, B1250, 2020--2021(1), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
+<li>Digital Image Processing, 2020--2021(2), 2020--2021(1), 2019--2020(2), 2019--2020(1), 2018--2019(2), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
 </li>
 
-<li>Digital Image Processing, B0445, 2019--2020(2), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
-</li>
-
-<li>Digital Image Processing, B1932, 2019--2020(1), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
-</li>
-
-<li>Digital Image Processing, B0332, 2018--2019(2).
-</li>
 
 </ul>
 
@@ -520,13 +514,13 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
   
 <li><strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, Bingkun Bao, and Changsheng Xu<br> 
 Meta-Learning Causal Feature Selection for Stable Prediction<br>
-<I>The IEEE International Conference on Multimedia & Expo</I>, (submitted).
+<I>The IEEE International Conference on Multimedia & Expo</I>, (accepted).
 </li>
 
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-<I>The 27th International Conference on Multimedia Modeling</I>, 2020 (Accepted).
+<I>The 27th International Conference on Multimedia Modeling</I>, MMM 2020 vol 12572. Springer, Cham. https://doi.org/10.1007/978-3-030-67832-6_10.
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
