--- a/index.htm
+++ b/index.htm
@@ -514,13 +514,13 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
   
 <li><strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, Bingkun Bao, and Changsheng Xu<br> 
 Meta-Learning Causal Feature Selection for Stable Prediction<br>
-<I>The IEEE International Conference on Multimedia & Expo</I>, (accepted).
+<I>The IEEE International Conference on Multimedia & Expo</I>, ICME 2021 (Oral, acceptance rate =30%).
 </li>
 
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-<I>The 27th International Conference on Multimedia Modeling</I>, MMM 2020 vol 12572. Springer, Cham. https://doi.org/10.1007/978-3-030-67832-6_10.
+<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021.
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
