--- a/index.htm
+++ b/index.htm
@@ -594,6 +594,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 <li>IEEE Transactions on Multimedia.</li>
+<li>Multimedia Systems.</li>
 <li>Multimedia Tools and Applications.</li>
 
 <br>
