--- a/index.htm
+++ b/index.htm
@@ -303,7 +303,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include machine learning, causal inference, continual learning, and cross-modal artificial intelligence. 
+His research interests include machine learning, causal representation learning, continual learning, and cross-modal semantic analysis. 
 <br>
 <br>
 <font size="" color="red"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
@@ -701,7 +701,7 @@ Tag-aware image classification via nested deep belief nets<br>
   近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。
   任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
-主要研究方向包括机器学习、因果推断、增量学习、跨模态人工智能等。
+主要研究方向包括机器学习、因果表征学习、增量学习、跨模态语义分析等。
 
 
 <br>
