--- a/index.htm
+++ b/index.htm
@@ -303,7 +303,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include machine learning, causal inference, continual learning, and cross-modal semantic analysis. 
+His research interests include machine learning, cross-modal semantic analysis, causal inference, and continual learning. 
 <br>
 <br>
 <font size="" color="red"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
@@ -611,23 +611,19 @@ Tag-aware image classification via nested deep belief nets<br>
 <font size="4"><b>STUDENTS</b> </font> &nbsp; <a href="#top">Go Top</a>
 </p>
 
-<p>
-<font size="3">
-<b>Collaborating Students</b></font>
-</p>
 
 <ul>
 
-<li>Huan Shao
+<li>Huan Shao (Co-superviser)
 </li>
 
-<li>Xiao Peng
+<li>Xiao Peng (Co-superviser)
 </li>
 
-<li>Haitao Fang
+<li>Haitao Fang (Co-superviser)
 </li>
 
-<li>Zhou Du
+<li>Zhou Du (Co-superviser)
 </li>
 
 
