--- a/index.htm
+++ b/index.htm
@@ -697,7 +697,7 @@ Tag-aware image classification via nested deep belief nets<br>
   近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。
   任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
-主要研究方向包括机器学习、因果推断、增量学习、跨模态语义分析等。
+主要研究方向包括机器学习、跨模态语义分析、因果推断、持续学习等。
 
 
 <br>
