--- a/index.htm
+++ b/index.htm
@@ -306,7 +306,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 His research interests include machine learning, cross-modal semantic analysis, causal inference, and continual learning. 
 <br>
 <br>
-<font size="" color="red"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
+<font size="" color="#C70039"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
 
 <br>
 <br>
@@ -701,7 +701,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 <br>
-<font size="" color="#E03814">欢迎有上进心与科研热情、数学与编程基础扎实、对人工智能与机器学习相关领域感兴趣的同学加入科研团队。有意向的同学请邮件联系：zqyuan0@gmail.com。</strong> </italic> </font>
+<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实、对人工智能与机器学习相关领域感兴趣的同学加入科研团队。有意向的同学请邮件联系：zqyuan0@gmail.com。</strong> </italic> </font>
 <br>
 <br>
 
