--- a/index.htm
+++ b/index.htm
@@ -326,11 +326,11 @@ His research interests include machine learning, cross-modal semantic analysis, 
 
 
 <li> 
-<font size="2" color="red"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021.
+<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021.
 </li>
 
 <li> 
-<font size="2" color="red"> [<I>June 01, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
+<font size="2" color="#C70039"> [<I>June 01, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
