--- a/index.htm
+++ b/index.htm
@@ -365,95 +365,26 @@ His research interests include machine learning, cross-modal semantic analysis, 
 <!**********************************RESEARCH*********************************************>
 <div class="rightBox">
 <p id="RESEARCH">
-<font size="4"><b>RECENT RESEARCH</b></font> &nbsp; <a href="#top">Go Top</a>
+<font size="4"><b>RESEARCH</b></font> &nbsp; <a href="#top">Go Top</a>
 <br></p>
 
 
+<p>
+<font size="3">
+<b>GRANT AND FUNDS</b></font>
+</p>
 
+<ul>
+<li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
 
-<!*******************---------------table-------------*************>
-<table cellpadding="0" cellspacing="0" width="90%">
-<tbody>
-  
-  
-<!*******************---------Stable prediction---------*************>
-<tr bgcolor="#fff9f9">
-<th colspan="2" align="left">
-<font color="black"><b>Stable Machine Learning</b>
-&nbsp;
+<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, the National Natural Science Foundation of China, 61802053.</li>
 
-
-
-</font>
-</th>
-</tr>
-<tr>
-<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/stable.png" width="150">
-</td>
-<td>
-
-Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
-We try to leverage ideas from meta-learning, transfer learning, and causality to improve the Out-of-distribution (OOD) generalization, robustness, and sample efficiency and so on.
-
+<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
+</ul>
 <br>
-
-<b>Paper/codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Download</a>]
-</td>
-</tr>
-<!**---------Stable prediction end--------------*>
-
-
+</div>
   
   
-<!*******************---------Multi-Modal Machine Comprehension---------*************>
-<tr bgcolor="#fff9f9">
-<th colspan="2" align="left">
-<font color="black"><b>Multi-Modal Machine Comprehension</b>
-
-&nbsp;
-
-<!--
-[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
--->
-
-</font>
-</th>
-</tr>
-<tr>
-<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/tqa.png" width="150">
-</td>
-<td>
-
-Multi-Modal Machine Comprehension task builds on the popular Visual Question Answering and Machine Comprehension paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
-We are engaged in developing advanced algorithms for multimodal learning and reasoning, especially for textbook question answering, diagram parsing, multi-step reasoning, neural-symbolic learning, etc.
-
-
-<br>
-
-<b>Paper/codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Download</a>]
-</td>
-</tr>
-<!*******************---------Multi-Modal Machine Comprehension end---------*************>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!*****-----------------****>
-
-</tbody>
-</table>
-
 <br>
 <br>
 
@@ -541,22 +472,6 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 
-<!**************** Grant and Funds****************>
-
-<div class="rightBox">
-<p id="FUNDS">
-<font size="4"><b>GRANT AND FUNDS</b> </font> &nbsp; <a href="#top">Go Top</a>
-</p>
-
-<ul>
-<li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
-
-<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, the National Natural Science Foundation of China, 61802053.</li>
-
-<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
-</ul>
-<br>
-</div>
 
 
 
