--- a/index.htm
+++ b/index.htm
@@ -371,7 +371,7 @@ His research interests include machine learning, cross-modal semantic analysis, 
 
 <p>
 <font size="3">
-<b>GRANT AND FUNDS</b></font>
+<b>Grants and Funds</b></font>
 </p>
 
 <ul>
