--- a/index.htm
+++ b/index.htm
@@ -259,7 +259,7 @@ School of Computing and Artificial Intelligence, Southwest Jiaotong University (
 <div class="box">
 <h3>contact</h3>
 <p>Office:
-Room X9445, No.9 building, School of Computing and Artificial Intelligence, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
+School of Computing and Artificial Intelligence, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
 China PR.</p>
 
 Email:&nbsp; zqyuan0@gmail.com
@@ -296,7 +296,7 @@ Email:&nbsp; zqyuan0@gmail.com
 <font size="4"><b>BRIEF BIOGRAPHY</b></font>
 </p>
 
-Zhaoquan Yuan is an Assistant Professor at the School of Computing and Artificial Intelligence</a>, <a href="https://www.swjtu.edu.cn/"  target="_blank">Southwest Jiaotong University (SWJTU)</a>. 
+Zhaoquan Yuan is an Assistant Professor at the <a href="https://scai.swjtu.edu.cn/index.htm"  target="_blank">School of Computing and Artificial Intelligence</a>, <a href="https://www.swjtu.edu.cn/"  target="_blank">Southwest Jiaotong University (SWJTU)</a>. 
 He graduated with his bachelor's degree from the <a href="http://cs.ustc.edu.cn/"  target="_blank">School of Computer Science and Technology</a>, <a href="https://www.ustc.edu.cn/"  target="_blank">University of Science and Technology of China (USTC)</a>, 
 and received his Ph.D. degree in Pattern Recognition and Intelligent System from <a href="http://nlpr-web.ia.ac.cn/mmc/index.html"  target="_blank">Multimedia Computing Group (MMC)</a>, <a href="http://www.nlpr.ia.ac.cn/cn/index.html"  target="_blank">National Laboratory of Pattern Recognition</a>, 
 <a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu</a> (IEEE Fellow, IAPR Fellow, NSFC杰青). He was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
@@ -326,7 +326,7 @@ His research interests include machine learning, cross-modal semantic analysis, 
 
 
 <li> 
-<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021.
+<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021 (Oral).
 </li>
 
 <li> 
