--- a/index.htm
+++ b/index.htm
@@ -280,7 +280,7 @@ Email:&nbsp; zqyuan0@gmail.com
 <li><a href="index.htm">HOMEPAGE</a></li> &nbsp; &nbsp; 
 <li><a href="./#RESEARCH">RESEARCH</a></li> &nbsp; &nbsp; 
 <li><a href="./#PUBLICATIONS">PUBLICATION</a></li> &nbsp; &nbsp; 
-<li><a href="./#RESOURCE">RESOURCE</a></li>
+<li><a href="./#RESOURCE">RESOURCE</a></li> &nbsp; &nbsp; 
 <li><a href="./#recruit">招生信息</a></li>
 
 
