--- a/index.htm
+++ b/index.htm
@@ -347,8 +347,10 @@ His research interests include machine learning, cross-modal semantic analysis, 
 <font size="4"><b>TEACHING</b></font> &nbsp; 
 </p>
 
-<ul>
-<li>Digital Image Processing, 2020--2021(2), 2020--2021(1), 2019--2020(2), 2019--2020(1), 2018--2019(2), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
+<li>Digital Image Processing, 2020--2021(1), 2019--2020(1), Department of Computer science and Technology, Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
+</li>
+
+<li>Digital Image Processing, 2020--2021(2), 2019--2020(2), 2018--2019(2), Department of Automation, Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
 </li>
 
 
