--- a/index.htm
+++ b/index.htm
@@ -412,12 +412,12 @@ His research interests include machine learning, cross-modal semantic analysis, 
 <li>
   <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu, and Changsheng Xu<br> 
 Adversarial Multimodal Network for Movie Story Question Answering <br> 
-<I>IEEE Transactions on Multimedia</I> (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
+<I>IEEE Transactions on Multimedia</I> (TMM, 中科院JCR一区), vol. 23, pp. 1744-1756, 2021, doi: 10.1109/TMM.2020.3002667.
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, and Yu-Gang Jiang <br> 
 DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br> 
- <I>Neurocomputing</I> (中科院JCR二区), 2020.
+ <I>Neurocomputing</I> (中科院JCR二区), Volume 444, 2021, Pages 319-331, ISSN 0925-2312.
 </li>
   
 <li>
@@ -445,13 +445,13 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
   
 <li><strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, Bingkun Bao, and Changsheng Xu<br> 
 Meta-Learning Causal Feature Selection for Stable Prediction<br>
-<I>The IEEE International Conference on Multimedia & Expo</I>, ICME 2021 (Oral, acceptance rate =30%).
+<I>The IEEE International Conference on Multimedia & Expo</I>, ICME 2021 (Oral, acceptance rate =15%).
 </li>
 
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021.
+<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021. <strong>Z(Best Paper Candidate)</strong>.
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
