--- a/index.htm
+++ b/index.htm
@@ -325,12 +325,19 @@ His research interests include machine learning, affective computing，cross-mod
 <ul>
 
 
+ <li> 
+<font size="2" color="#C70039"> [<I>June 1, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. 
+  "Contrastive learning in frequency domain for Non-I.I.D. image classification" is nominated for the best paper award.
+</li>
+  
 <li> 
-<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021 (Oral).
+<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. 
+  "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021 (Oral, acceptance rate =15%).
 </li>
 
 <li> 
-<font size="2" color="#C70039"> [<I>June 01, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
+<font size="2" color="#C70039"> [<I>June 01, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. 
+"Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
@@ -451,7 +458,7 @@ Meta-Learning Causal Feature Selection for Stable Prediction<br>
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021. <strong>Z(Best Paper Candidate)</strong>.
+<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021. <strong>(Best Paper Candidate)</strong>.
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
