--- a/index.htm
+++ b/index.htm
@@ -327,12 +327,12 @@ His research interests include machine learning, affective computing，cross-mod
 
  <li> 
 <font size="2" color="#C70039"> [<I>June 1, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. 
-  "Contrastive learning in frequency domain for Non-I.I.D. image classification" is nominated for the best paper award.
+  "Contrastive learning in frequency domain for Non-I.I.D. image classification" is nominated for the best paper award at MMM'2021.
 </li>
   
 <li> 
 <font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. 
-  "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021 (Oral, acceptance rate =15%).
+  "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME'2021 (Oral, acceptance rate =15%).
 </li>
 
 <li> 
