--- a/index.htm
+++ b/index.htm
@@ -259,7 +259,7 @@ School of Computing and Artificial Intelligence, Southwest Jiaotong University (
 <div class="box">
 <h3>contact</h3>
 <p>Office:
-School of Computing and Artificial Intelligence, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
+Room X9445, No.9 building, School of Computing and Artificial Intelligence, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
 China PR.</p>
 
 Email:&nbsp; zqyuan0@gmail.com
@@ -303,7 +303,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include machine learning, affective computing，cross-modal semantic analysis, pattern recognition. 
+His research interests include machine learning, affective computing, cross-modal semantic analysis, and pattern recognition. 
 <br>
 <br>
 <font size="" color="#C70039"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
@@ -325,14 +325,15 @@ His research interests include machine learning, affective computing，cross-mod
 <ul>
 
 
- <li> 
+
+<li> 
 <font size="2" color="#C70039"> [<I>June 1, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu. 
-  "Contrastive learning in frequency domain for Non-I.I.D. image classification" is nominated for the best paper award at MMM'2021.
+"Contrastive learning in frequency domain for Non-I.I.D. image classification" is nominated for the best paper award at MMM'2021.
 </li>
-  
+
 <li> 
 <font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. 
-  "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME'2021 (Oral, acceptance rate =15%).
+"Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021 (Oral, acceptance rate =15%).
 </li>
 
 <li> 
@@ -355,6 +356,7 @@ His research interests include machine learning, affective computing，cross-mod
 </p>
 
 <ul>
+
 <li>Digital Image Processing, 2020--2021(1), 2019--2020(1), Department of Computer science and Technology, Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
 </li>
 
@@ -371,32 +373,189 @@ His research interests include machine learning, affective computing，cross-mod
 
 
 
-
+<!--
 <!**********************************RESEARCH*********************************************>
 <div class="rightBox">
 <p id="RESEARCH">
-<font size="4"><b>RESEARCH</b></font> &nbsp; <a href="#top">Go Top</a>
+<font size="4"><b>RECENT RESEARCH</b></font> &nbsp; <a href="#top">Go Top</a>
 <br></p>
 
 
-<p>
-<font size="3">
-<b>Grants and Funds</b></font>
-</p>
 
-<ul>
 
-  <li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, the National Natural Science Foundation of China, 61802053.</li>
-  <li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
-<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
-</ul>
+<!*******************---------------table-------------*************>
+<table cellpadding="0" cellspacing="0" width="90%">
+<tbody>
+  
+
+
+<!*******************---------Cross-Modal AI---------*************>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Cross-Modal Generalization</b>
+
+&nbsp;
+
+
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/cross-modality.png" width="190">
+</td>
+<td>
+
+Multi-Modal Machine Comprehension task builds on the popular Visual Question Answering and Machine Comprehension paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
+We are engaged in developing advanced algorithms for multimodal learning and reasoning, especially for textbook question answering, diagram parsing, multi-step reasoning, neural-symbolic learning, etc.
+
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+</td>
+</tr>
+<!*******************---------Cross-Modal AI end---------*************>
+
+
+
+
+
+<!*******************---------Multimodal QA---------*************>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Multimodal QA</b>
+&nbsp;
+
+
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/causal-graph.png" width="190">
+</td>
+<td>
+
+
+Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. 
+However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
+We try to leverage ideas from causality to improve the Out-of-distribution (OOD) generalization, robustness, and sample efficiency and so on.
+Especially, we focus on the discovery of high-level causal variables from low-level observations, including learning disentangled representations, transferable mechanisms,
+ interventional world models, and modular/compositional representations, etc.
+
+
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+</td>
+</tr>
+<!**---------Multimodal QA end--------------*>
+
+
 
   
+<!*******************---------LINE---------*************>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Learning in Non-stationary Environments (LINE)</b>
+&nbsp;
+
+
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/continual-AI.png" width="190">
+</td>
+<td>
+
+continual learning setting explicitly focuses on non-stationary or changing environments, often divided into a set of tasks that need to be completed sequentially.
+To enable this, the robot will need to adapt quickly, and also not forget (at least not catastrophically). If there is forgetting, then fast recovery is critical. 
+When learning related tasks (e.g., vacuuming, sweeping, and mopping), the robot should show forward transfer (better performance and faster learning on each 
+subsequent task) and also show backward transfer (better performance on previous tasks, when revisited) because of transfer from the current task. 
+Moreover, the robot will have limited access to previous tasks as well as limited capacity to store data, increase its model size, or increase processing time.
+
+
+Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable. We try to leverage ideas from causality to improve the Out-of-distribution (OOD) generalization, robustness, and sample efficiency and so on. Especially, we focus on the discovery of high-level causal variables from low-level observations, including learning disentangled representations, transferable mechanisms, interventional world models, and modular/compositional representations, etc.
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+</td>
+</tr>
+<!**---------LILNE end--------------*>
+
+
+
+
+
+
+
+
+<!*******************---------Causal Representation Learning---------*************>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Causal Representation Learning</b>
+&nbsp;
+
+
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/causal-graph.png" width="190">
+</td>
+<td>
+
+
+Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. 
+However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
+We try to leverage ideas from causality to improve the Out-of-distribution (OOD) generalization, robustness, and sample efficiency and so on.
+Especially, we focus on the discovery of high-level causal variables from low-level observations, including learning disentangled representations, transferable mechanisms,
+ interventional world models, and modular/compositional representations, etc.
+
+
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+</td>
+</tr>
+<!**---------Causal Representation Learning end--------------*>
+
+ 
+  
+
+
+
+
+
+
+
+
+
+
+
+
+<!*****-----------------****>
+
+</tbody>
+</table>
+
 <br>
 <br>
 
 </div>
-
+--> 
 
 
 
@@ -452,13 +611,13 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
   
 <li><strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, Bingkun Bao, and Changsheng Xu<br> 
 Meta-Learning Causal Feature Selection for Stable Prediction<br>
-<I>The IEEE International Conference on Multimedia & Expo</I>, ICME 2021 (Oral, acceptance rate =15%).
+<I>The IEEE International Conference on Multimedia & Expo</I>, ICME 2021 (Oral, acceptance rate = 15%).
 </li>
 
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021. <strong>(Best Paper Candidate)</strong>.
+<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021, <strong>(Best Paper Candidate)</strong>.
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
@@ -478,7 +637,23 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 
+<!**************** Grant and Funds****************>
 
+<div class="rightBox">
+<p id="FUNDS">
+<font size="4"><b>GRANT AND FUNDS</b> </font> &nbsp; <a href="#top">Go Top</a>
+</p>
+
+<ul>
+
+<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, the National Natural Science Foundation of China, 61802053.</li>
+
+<li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
+
+<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
+</ul>
+<br>
+</div>
 
 
 
@@ -491,7 +666,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <p>
 <font size="3">
-<b>Program Committee Members</b></font>
+<b>Program Committee Member</b></font>
 </p>
 
 <ul>
@@ -500,7 +675,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <li>ACM International Conference on Multimedia Retrieval 2021, 2020, 2019.</li>
 <li>IEEE International Conference on Multimedia and Expo 2019. </li>
 <li>International Conference on Multimedia Modeling 2021, 2020, 2019.</li>
-<li>ACM International Conference on Multimedia in Asia 2020, 2019.</li>
+<li>ACM International Conference on Multimedia in Asia 2019.</li>
 <li>IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining 2019.</li>
 
 
@@ -532,6 +707,14 @@ Tag-aware image classification via nested deep belief nets<br>
 <p id="STUDENTS">
 <font size="4"><b>STUDENTS</b> </font> &nbsp; <a href="#top">Go Top</a>
 </p>
+
+
+<!--
+<p>
+<font size="3">
+<b>Collaborating Students</b></font>
+</p>
+-->
 
 
 <ul>
@@ -614,16 +797,13 @@ Tag-aware image classification via nested deep belief nets<br>
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，
-  师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。
-  近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。
-  任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
+袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
 主要研究方向包括机器学习、情感计算、跨模态语义分析、模式识别等。
 
 
 <br>
-<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实、对人工智能与机器学习相关领域感兴趣的同学加入科研团队。有意向的同学请邮件联系：zqyuan0@gmail.com。</strong> </italic> </font>
+<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实，对人工智能与机器学习相关方向感兴趣的同学加入科研团队。有意向的同学请邮件联系: zqyuan0@gmail.com。</strong> </italic> </font>
 <br>
 <br>
 
