--- a/index.htm
+++ b/index.htm
@@ -670,12 +670,12 @@ Tag-aware image classification via nested deep belief nets<br>
 </p>
 
 <ul>
-
-<li>ACM International Conference on Multimedia 2020, 2019.</li>
+<li>ACM International Conference on Multimedia 2021, 2020, 2019.</li>
+<li>International Conference on Empirical Methods in Natural Language Processing 2021.</li>
 <li>ACM International Conference on Multimedia Retrieval 2021, 2020, 2019.</li>
-<li>IEEE International Conference on Multimedia and Expo 2019. </li>
+<li>IEEE International Conference on Multimedia and Expo 2021, 2020, 2019. </li>
 <li>International Conference on Multimedia Modeling 2021, 2020, 2019.</li>
-<li>ACM International Conference on Multimedia in Asia 2019.</li>
+<li>ACM International Conference on Multimedia in Asia 2020, 2019.</li>
 <li>IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining 2019.</li>
 
 
@@ -797,7 +797,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
+袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
 主要研究方向包括机器学习、情感计算、跨模态语义分析、模式识别等。
 
@@ -816,7 +816,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <!*****************************updated date***********************************>
 <div class="rightBox">
 
-Last updated date: Oct 15, 2020.
+Last updated date: June 1, 2021.
 <br>
 <br>
 </div>
