--- a/index.htm
+++ b/index.htm
@@ -718,6 +718,11 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 <ul>
+<li>Huancheng Xu
+</li>
+
+<li>Baili Zhou
+</li>
 
 <li>Huan Shao (Co-superviser)
 </li>
@@ -753,6 +758,9 @@ Tag-aware image classification via nested deep belief nets<br>
 </p>
 
 <ul>
+
+<li><a href="https://www.aclweb.org/portal/acl"  target="_blank">ACL Association for Computational Linguistics</a>
+</li>
   
 <li><a href="https://github.com/amber0309/Domain-generalization"  target="_blank">Domain Generalization</a>
 </li>
