--- a/index.htm
+++ b/index.htm
@@ -327,8 +327,8 @@ His research interests include machine learning, affective computing, cross-moda
 
 
 <li> 
-<font size="2" color="#C70039"> [<I>June 1, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu. 
-"Contrastive learning in frequency domain for Non-I.I.D. image classification" is nominated for the best paper award at MMM'2021.
+<font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu. 
+"Contrastive learning in frequency domain for Non-I.I.D. image classification" receives the best paper award at MMM'2021.
 </li>
 
 <li> 
@@ -617,7 +617,7 @@ Meta-Learning Causal Feature Selection for Stable Prediction<br>
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021, <strong>(Best Paper Candidate)</strong>.
+<I>The 27th International Conference on Multimedia Modeling</I>, MMM, vol 12572, pp. 111-122. Springer, Cham, 2021, (<strong>Best Paper Award</strong>).
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
@@ -824,7 +824,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <!*****************************updated date***********************************>
 <div class="rightBox">
 
-Last updated date: June 1, 2021.
+Last updated date: June 24, 2021.
 <br>
 <br>
 </div>
