--- a/index.htm
+++ b/index.htm
@@ -327,8 +327,8 @@ His research interests include machine learning, affective computing, cross-moda
 
 
 <li> 
-<font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu. 
-"Contrastive learning in frequency domain for Non-I.I.D. image classification" receives the best paper award at MMM'2021.
+<font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu.
+"Contrastive learning in frequency domain for Non-I.I.D. image classification" is awarded as best paper at MMM'2021.
 </li>
 
 <li> 
@@ -824,7 +824,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <!*****************************updated date***********************************>
 <div class="rightBox">
 
-Last updated date: June 24, 2021.
+Last updated date: June 1, 2021.
 <br>
 <br>
 </div>
