--- a/index.htm
+++ b/index.htm
@@ -724,6 +724,10 @@ Tag-aware image classification via nested deep belief nets<br>
 <li>Baili Zhou
 </li>
 
+<li>Liping Zhang (Co-superviser)
+</li>
+
+
 <li>Huan Shao (Co-superviser)
 </li>
 
