--- a/index.htm
+++ b/index.htm
@@ -303,7 +303,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include machine learning, affective computing, cross-modal semantic analysis, and pattern recognition. 
+His research interests include machine learning, pattern recognition, multimodal semantic analysis, and natural language processing. 
 <br>
 <br>
 <font size="" color="#C70039"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
@@ -811,7 +811,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
-主要研究方向包括机器学习、情感计算、跨模态语义分析、模式识别等。
+主要研究方向包括机器学习、模式识别、多模态语义分析、自然语言处理等。
 
 
 <br>
