--- a/index.htm
+++ b/index.htm
@@ -324,6 +324,11 @@ His research interests include machine learning, pattern recognition, multimodal
 <ul>
 
 
+<li> 
+<font size="2" color="#C70039"> [<I>Junly 4, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, and C. Xu.
+"Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer" is accepted by ACM MM 2021.
+</li>
+
 
 <li> 
 <font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu.
@@ -575,6 +580,13 @@ Especially, we focus on the discovery of high-level causal variables from low-le
 
 
 <ul>
+
+<li>
+<strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, and Changsheng Xu
+<br> Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer<br> 
+<I>ACM MM 2021</I> (CCF-A), Accepted.
+</li>
+
 
 <li>
 <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu, and Changsheng Xu<br> 
