--- a/index.htm
+++ b/index.htm
@@ -302,7 +302,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include machine learning, pattern recognition, multimodal semantic analysis, and natural language processing. 
+His research interests include pattern recognition and machine learning methods, as well as their applications in multimedia, natural language processing, and affective computing. 
 <br>
 <br>
 <font size="" color="#C70039"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
@@ -326,7 +326,7 @@ His research interests include machine learning, pattern recognition, multimodal
 
 <li> 
 <font size="2" color="#C70039"> [<I>Junly 4, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, and C. Xu.
-"Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer" is accepted by ACM MM 2021.
+"Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer" is accepted by ACM MM 2021 (CCF-A).
 </li>
 
 
@@ -341,7 +341,7 @@ His research interests include machine learning, pattern recognition, multimodal
 </li>
 
 <li> 
-<font size="2" color="#C70039"> [<I>June 01, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. 
+<font size="2" color="#C70039"> [<I>June 1, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. 
 "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
@@ -741,6 +741,11 @@ Tag-aware image classification via nested deep belief nets<br>
 <li>Liping Zhang (Co-superviser)
 </li>
 
+<li>Yuankang Pan (Co-superviser)
+</li>
+
+<li>Chengbin Zhao (Co-superviser)
+</li>
 
 <li>Huan Shao (Co-superviser)
 </li>
