--- a/index.htm
+++ b/index.htm
@@ -298,7 +298,7 @@ Email:&nbsp; zqyuan0@gmail.com
 Zhaoquan Yuan is an Assistant Professor at the <a href="https://scai.swjtu.edu.cn/index.htm"  target="_blank">School of Computing and Artificial Intelligence</a>, <a href="https://www.swjtu.edu.cn/"  target="_blank">Southwest Jiaotong University (SWJTU)</a>. 
 He graduated with his bachelor's degree from the <a href="http://cs.ustc.edu.cn/"  target="_blank">School of Computer Science and Technology</a>, <a href="https://www.ustc.edu.cn/"  target="_blank">University of Science and Technology of China (USTC)</a>, 
 and received his Ph.D. degree in Pattern Recognition and Intelligent System from <a href="http://nlpr-web.ia.ac.cn/mmc/index.html"  target="_blank">Multimedia Computing Group (MMC)</a>, <a href="http://www.nlpr.ia.ac.cn/cn/index.html"  target="_blank">National Laboratory of Pattern Recognition</a>, 
-<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu</a> (IEEE Fellow, IAPR Fellow, NSFC杰青). He was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
+<a href="http://www.ia.cas.cn/"  target="_blank">Institute of Automation, Chinese Academy of Sciences</a>, advised by <a href="http://nlpr-web.ia.ac.cn/mmc/homepage/csxu.html"  target="_blank">Prof. Changsheng Xu</a> (NSFC杰青, IEEE Fellow, IAPR Fellow). He was a research visitor in the China-Singapore Institute of Digital Media (CSIDM) and Department of Computing of The Hong Kong Polytechnic University respectively. 
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
@@ -828,7 +828,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
-主要研究方向包括机器学习、模式识别、多模态语义分析、自然语言处理等。
+主要研究方向包括模式识别与机器学习方法，及其在多媒体分析、自然语言处理、情感计算中的应用。
 
 
 <br>
@@ -845,7 +845,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <!*****************************updated date***********************************>
 <div class="rightBox">
 
-Last updated date: June 1, 2021.
+Last updated date: Junly 6, 2021.
 <br>
 <br>
 </div>
