--- a/index.htm
+++ b/index.htm
@@ -584,7 +584,7 @@ Especially, we focus on the discovery of high-level causal variables from low-le
 <li>
 <strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, and Changsheng Xu
 <br> Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer<br> 
-<I>ACM MM 2021</I> (CCF-A), Accepted.
+<I>The proceedings of the 29st ACM international conference on Multimedia</I> (ACM MM, CCF-A), Accepted.
 </li>
 
 
