--- a/index.htm
+++ b/index.htm
@@ -259,7 +259,7 @@ School of Computing and Artificial Intelligence, Southwest Jiaotong University (
 <div class="box">
 <h3>contact</h3>
 <p>Office:
-Room X9445, No.9 building, School of Computing and Artificial Intelligence, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
+Room 714, multiple-use building, Southwest Jiaotong University, West Hi-Tech Zone, Chengdu,
 China PR.</p>
 
 Email:&nbsp; zqyuan0@gmail.com
@@ -845,7 +845,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <!*****************************updated date***********************************>
 <div class="rightBox">
 
-Last updated date: Junly 6, 2021.
+Last updated date: Junly 16, 2021.
 <br>
 <br>
 </div>
