--- a/index.htm
+++ b/index.htm
@@ -660,9 +660,11 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <ul>
 
-<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, the National Natural Science Foundation of China, 61802053.</li>
+<li>Machine Learning and Reasoning in Video Question Answering, 2019.01 -- 2021.12, National Natural Science Foundation of China, 61802053.</li>
 
 <li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
+
+<li>Key Technologies of Video Question Answering System, Project funded by China Postdoctoral Science Foundation, 2020M683353.</li>
 
 <li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
 </ul>
