--- a/index.htm
+++ b/index.htm
@@ -664,7 +664,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <li>Machine Reasoning Research Towards Multimodal Question Answering, 2012.01 -- 2022.12, Sichuan Science and Technology Program, 2020YJ0037.</li>
 
-<li>Key Technologies of Video Question Answering System, Project funded by China Postdoctoral Science Foundation, 2020M683353.</li>
+<li>Key Technologies of Video Question Answering System, China Postdoctoral Science Foundation, 2020M683353.</li>
 
 <li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
 </ul>
