--- a/index.htm
+++ b/index.htm
@@ -666,7 +666,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <li>Key Technologies of Video Question Answering System, China Postdoctoral Science Foundation, 2020M683353.</li>
 
-<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, the Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
+<li>Semantic Understanding toward Video Question Answering, 2019.01 -- 2020.12, Fundamental Research Funds for the Central Universities, 2682019CX62.</li>
 </ul>
 <br>
 </div>
