--- a/index.htm
+++ b/index.htm
@@ -830,7 +830,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金、四川省科技计划等项目多项。
-主要研究方向包括模式识别与机器学习方法，及其在多媒体分析、自然语言处理、情感计算中的应用。
+主要研究方向包括模式识别与机器学习方法，及其在多媒体分析、计算机视觉、自然语言处理、情感计算中的应用。
 
 
 <br>
