--- a/index.htm
+++ b/index.htm
@@ -302,7 +302,7 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
-His research interests include pattern recognition and machine learning methods, as well as their applications in multimedia, natural language processing, and affective computing. 
+His research interests include multimodal semantic analysis, machine learning, question answering, and conversation. 
 <br>
 <br>
 <font size="" color="#C70039"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
@@ -326,7 +326,7 @@ His research interests include pattern recognition and machine learning methods,
 
 <li> 
 <font size="2" color="#C70039"> [<I>Junly 4, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, and C. Xu.
-"Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer" is accepted by ACM MM 2021 (CCF-A).
+"Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer" is accepted by ACM MM 2021 (CCF-A, Oral).
 </li>
 
 
@@ -584,7 +584,7 @@ Especially, we focus on the discovery of high-level causal variables from low-le
 <li>
 <strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, and Changsheng Xu
 <br> Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer<br> 
-<I>The proceedings of the 29st ACM international conference on Multimedia</I> (ACM MM, CCF-A), Accepted.
+<I>The proceedings of the 29st ACM international conference on Multimedia</I> (ACM MM, CCF-A, Oral), DOI: 10.1145/3474085.3475255.
 </li>
 
 
@@ -828,9 +828,9 @@ Tag-aware image classification via nested deep belief nets<br>
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
-目前主持国家自然科学基金、四川省科技计划等项目多项。
-主要研究方向包括模式识别与机器学习方法，及其在多媒体分析、计算机视觉、自然语言处理、情感计算中的应用。
+袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。曾获MMM2021最佳论文奖。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
+目前主持国家自然科学基金青年项目、四川省科技计划基础研究项目、中国博士后基金项目等多项。
+主要研究方向包括多模态语义分析，机器学习，智能问答与对话等。
 
 
 <br>
