--- a/index.htm
+++ b/index.htm
@@ -740,21 +740,18 @@ Tag-aware image classification via nested deep belief nets<br>
 <li>Baili Zhou
 </li>
 
-<li>Liping Zhang (Co-superviser)
+<li>Chengbin Zhao (Co-superviser)
 </li>
 
 <li>Yuankang Pan (Co-superviser)
 </li>
 
-<li>Chengbin Zhao (Co-superviser)
+<li>Liping Zhang (Co-superviser)
 </li>
 
 <li>Huan Shao (Co-superviser)
 </li>
 
-
-<li>Haitao Fang (Co-superviser)
-</li>
 
 <li>Zhou Du (Co-superviser)
 </li>
@@ -834,7 +831,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 <br>
-<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实，对人工智能与机器学习相关方向感兴趣的同学加入科研团队。有意向的同学请邮件联系: zqyuan0@gmail.com。</strong> </italic> </font>
+<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实，对多模态语义分析、机器学习、自然语言处理等相关方向感兴趣的同学加入科研团队。有意向的同学请邮件联系: zqyuan0@gmail.com。</strong> </italic> </font>
 <br>
 <br>
 
