--- a/index.htm
+++ b/index.htm
@@ -325,23 +325,23 @@ His research interests include multimodal semantic analysis, machine learning me
 
 
 <li> 
-<font size="2" color="#C70039"> [<I>Junly 4, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, and C. Xu.
+<font size="2" color="#C70039"> [<I>Junly 4, 2021</I>] </italic> </font> Our paper 
 "Hierarchical Multi-Task Learning for Diagram Question Answering with Multi-Modal Transformer" is accepted by ACM MM 2021 (CCF-A, Oral).
 </li>
 
 
 <li> 
-<font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper “H. Shao, Z. Yuan, X. Peng, and X. Wu.
+<font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper 
 "Contrastive learning in frequency domain for Non-I.I.D. image classification" is awarded as best paper at MMM'2021.
 </li>
 
 <li> 
-<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper “Z. Yuan, X. Peng, X. Wu, B. Bao, and C. Xu. 
+<font size="2" color="#C70039"> [<I>March 6, 2021</I>] </italic> </font> Our paper
 "Meta-Learning Causal Feature Selection for Stable Prediction" is accepted by ICME 2021 (Oral, acceptance rate =15%).
 </li>
 
 <li> 
-<font size="2" color="#C70039"> [<I>June 1, 2020</I>] </italic> </font> Our paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. 
+<font size="2" color="#C70039"> [<I>June 1, 2020</I>] </italic> </font> Our paper
 "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
