--- a/index.htm
+++ b/index.htm
@@ -332,7 +332,7 @@ His research interests include multimodal semantic analysis, machine learning me
 
 <li> 
 <font size="2" color="#C70039"> [<I>June 24, 2021</I>] </italic> </font> Our paper 
-"Contrastive learning in frequency domain for Non-I.I.D. image classification" is awarded as best paper at MMM'2021.
+"Contrastive learning in frequency domain for Non-I.I.D. image classification" is awarded as best paper at MMM 2021.
 </li>
 
 <li> 
