--- a/index.htm
+++ b/index.htm
@@ -643,11 +643,11 @@ Tag-aware image classification via nested deep belief nets<br>
 
 袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (国家杰青, IEEE Fellow, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。曾获国际学术会议MMM 2021最佳论文奖。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, EMNLP, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Systems, Multimedia Tools and Applications等国际期刊审稿人。  
 目前主持国家自然科学基金青年项目、四川省科技计划基础研究项目、中国博士后基金项目等多项。
-主要研究方向包括跨模态智能，机器学习方法与应用，智能对话等。
+主要研究方向包括跨模态智能分析，机器学习方法与应用，对话式人工智能等。
 
 
 <br>
-<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实，对多模态语义分析、机器学习、自然语言处理等相关方向感兴趣的同学加入科研团队。有意向的同学请邮件联系: zqyuan0@gmail.com。</strong> </italic> </font>
+<font size="" color="#C70039">欢迎有上进心与科研热情、数学与编程基础扎实，对跨模态智能分析、机器学习、智能对话系统等相关方向感兴趣的同学加入科研团队。有意向的同学请邮件联系: zqyuan0@gmail.com。</strong> </italic> </font>
 <br>
 <br>
 
